# opencor-developer-documentation

./: .gitmodules  CMakeLists.txt  Makefile  README.rst  clean  clean.bat  make  make.bat
src/: buildTestAndRun.rst  conf.py  conf.py.in  fileStructure.rst  functionalTests.rst  index.rst  package.rst  prerequisites.rst  thirdPartyLibraries.rst
src/develop/: codingStyle.rst  index.rst  internationalisation.rst  tests.rst
src/develop/pics/: README.rst
src/develop/plugins/: index.rst  sample.rst  sampleTools.rst  sampleView.rst  sampleWindow.rst
src/functionalTests/: index.rst
styles/: opencor.css
theme/: layout.html
theme/static/: theme.css  theme.css_t  theme.js
